gccida/c1/bitmap_equal_p
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/bitmap_equal_p/src/bitmap.c:1137:12: error: expected expression
*( _OWORD *)&v4.first = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/bitmap_equal_p/src/bitmap.c:1137:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v4.first = 0LL; 
   ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/bitmap_equal_p/src/obj/bitmap.o] Error 1
